Update and rename style1.css to style_carina.css

--- a/style_carina.css
+++ b/style_carina.css
@@ -36,11 +36,10 @@ table {
   transition:linear 0.3s;
 }
 
-.button{
-  display:inline-block;
-  text-align:center;
+.p1 {
+  background-color: red;
 }
 
-input{
-  margin-top:15px;
+.p2 {
+  background-color: yellow;
 }
